added Loan definitions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h2></h2>
-<p></p>
+<h2>Simple Interest Loan</h2>
+<p>A simple interest loan is a method of calculating interest based off a payment made over a period of time.
+    The total amount you pay is the same period of time interest rate based off your principle amount multiplied
+    by the period of time of payments. Formula is i = P * r * t</p>
+<p>Example:</p>
+<p>put some real word problem type of example in here.....complete with how to manually calculate the loan over time.....</p>
+<h2>Compound Interest Loan</h2>
+<p>Unlike a simple interest loan, a compound interest loan charges interest on the interest. Rather than owing an interest
+    rate on your principal amount, you owe the interest rate based on the principle and any other interest amount. </p>
+<h2>Interest Only Loan</h2>
+<p>In an Interest only loan, you pay a fixed amount of interest based on the principal amount. Then you pay that amount over
+    the course of a designated time period. (P*r)/n n = number of times per year</p>
 </body>
 </html>
