Added definitions with some styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
+<h1>Different Types of Loans</h1>
 <h2>Simple Interest Loan</h2>
 <p>A simple interest loan is a method of calculating interest based off a payment made over a period of time.
-    The total amount you pay is the same period of time interest rate based off your principle amount multiplied
-    by the period of time of payments. Formula is i = P * r * t</p>
+    The total amount you pay is the principal amount plus the interest that accrues over the duration of the loan.</p>
+$$i=Prt(\frac{$5000}{1 month})$$
 <p>Example:</p>
-<p>put some real word problem type of example in here.....complete with how to manually calculate the loan over time.....</p>
+<p>If I take out a loan of $5000 with a 10% monthly interest rate that will be payed in 5 years, the total amount of
+    interest can be calculated. <ul><li>$$P = $5000$$</li><li>$$r = \frac{10\%}{1 month}$$</li><li>$$t = (12 months)*(5 years)$$</li></ul>
+    $$i = (5000) * (0.10) * (60)$$
+    $$i = $30,000$$</p>
 <h2>Compound Interest Loan</h2>
 <p>Unlike a simple interest loan, a compound interest loan charges interest on the interest. Rather than owing an interest
     rate on your principal amount, you owe the interest rate based on the principle and any other interest amount. </p>
