Finalized Simple interest loan

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <h2>Simple Interest Loan</h2>
 <p>A simple interest loan is a method of calculating interest based off a payment made over a period of time.
     The total amount you pay is the principal amount plus the interest that accrues over the duration of the loan.</p>
-$$i=Prt(\frac{$5000}{1 month})$$
-<p>Example:</p>
+$$i=Prt$$
+<p id="example">Example:</p>
 <p>If I take out a loan of $5000 with a 10% monthly interest rate that will be payed in 5 years, the total amount of
-    interest can be calculated. <ul><li>$$P = $5000$$</li><li>$$r = \frac{10\%}{1 month}$$</li><li>$$t = (12 months)*(5 years)$$</li></ul>
-    $$i = (5000) * (0.10) * (60)$$
+    interest can be calculated. <ul><li>$$P = $5000$$</li><li>$$r = \frac{10\%}{1 month}$$</li><li>$$t = 5 years$$</li></ul>
+    $$r = \frac{10\%}{1month} * \frac{12months}{1year} = \frac{120%}{1year}$$
+    $$i = ($5000) * (120\%) * (5 years)$$
     $$i = $30,000$$</p>
 <h2>Compound Interest Loan</h2>
 <p>Unlike a simple interest loan, a compound interest loan charges interest on the interest. Rather than owing an interest
