Finalized Compound interest and simple interest loans

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     interest can be calculated. <ul><span><li>$$P = $5000$$</li><li>$$r = \frac{10\%}{1 \text{ month}}$$</li><li>$$t = 5 \text{ years}$$</li></span></ul>
     <span>$$r = \frac{10\%}{1\text{ month}} * \frac{12\text{ months}}{1\text{ year}} = \frac{120%}{1\text{ year}}$$</span>
     <span>$$i = ($5000) * (120\%) * (5 \text{ years})$$</span>
-    <span>$$i = $30,000$$</span>></p>
+    <span>$$i = $30,000$$</span>
+    <span>$$\text{Total Cost} = $35,000$$</span>
+    <span>$$\text{Monthly Payment} = $35,000/60\text{ months} = $583.33$$</span></p>
 <h2>Compound Interest Loan</h2>
 <p>Unlike a simple interest loan, a compound interest loan charges interest total amount owed. Rather than owing an interest
     rate on your principal amount, you owe the interest from the total amount. The total amount owed is is increased by the
@@ -37,13 +39,13 @@
 <p>If I take out a loan of $5000 with a 10% annual interest rate compounded monthly for 3 years, the monthly cost of
     the loan can be calculated.
     <ul>
-        <span><li>$$Px = $5000$$</li>
+        <span><li>$$P = $5000$$</li>
             <li>$$r = 10\%$$</li>
             <li>$$n = 36$$</li>
             <li>$$t = 3 \text{ years}$$</li></span>
     </ul>
-    <span>$$x = \frac{$5000 * \frac{10\%}{}}{}$$</span>
-    <span>$$A = $8,227$$</span>></p>
+    <span>$$x = \frac{$5000 * (\frac{10\%}{36})}{(1-(1+\frac{10\%}{36})^{-36*3})}$$</span>
+    <span>$$x = $53.65$$</span></p>
 <h2>Interest Only Loan</h2>
 <p>In an Interest only loan, you pay a fixed amount of interest based on the principal amount. Then you pay that amount over
     the course of a designated time period.</p>
