Added Collapsibles for the tables.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,14 @@
     <ul><span><li>$$P = \text{Principal} = $5000$$</li><li>$$r = \text{rate} = 10\%$$</li><li>$$n = \text{number of payments} = 4$$</li></span></ul>
     <span>$$A = \frac{$5000 * 10\%}{4}$$</span>
     <span>$$A = $125$$</span></p>
+
+<div id="collapse">
+    <button onclick="createCollapse();">click on me</button>
 </div>
+
+</div>
+
+
 <footer>
     Footer
 
