Added Page with grid for compareing loans

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 <h1>Different Types of Loans</h1>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="compare.html">Compare</a>
+</nav>
 <div id="main">
 <h2>Simple Interest Loan</h2>
 <p>A simple interest loan is a method of calculating interest based off a payment made over a period of time.
