--- a/compare.html
+++ b/compare.html
@@ -5,20 +5,34 @@
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="compare.css">
+    <script src="Loans.js"></script>
 </head>
 <body>
 <div class="container">
     <h1>Compare Loans</h1>
-    <nav></nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="compare.html">Compare</a>
+    </nav>
     <div id="leftPad"></div>
-    <div id="leftLoanChoice"></div>
-    <div id="rightLoanChoice"></div>
-    <div id="leftLoanInput"></div>
-    <div id="rightLoanInput"></div>
+    <div id="leftLoanChoice">
+        <a class="optionA" id="simpleIntA" onclick="loanSelect('simpleIntA');">Simple Interest</a>
+        <a class="optionA" id="compIntA" onclick="loanSelect('compIntA');">Compound Interest</a>
+        <a class="optionA" id="intOnlyA" onclick="loanSelect('intOnlyA');">Interest Only</a>
+    </div>
+    <div id="rightLoanChoice">
+        <a class="optionB" id="simpleIntB" onclick="loanSelect('simpleIntB');">Simple Interest</a>
+        <a class="optionB" id="compIntB" onclick="loanSelect('compIntB');">Compound Interest</a>
+        <a class="optionB" id="intOnlyB" onclick="loanSelect('intOnlyB');">Interest Only</a>
+    </div>
+    <div id="leftLoanInput"><p class="noLoanSelected" id="noLoanA">No Loan Selected</p></div>
+    <div id="rightLoanInput"><p class="noLoanSelected" id="noLoanB">No Loan Selected</p></div>
+    <div id="calcButton"><a id="calcCompare" onclick="compareCalc();">Calculate</a></div>
     <div id="leftLoanTable"></div>
     <div id="rightLoanTable"></div>
     <div id="rightPad"></div>
-    <footer></footer>
+    <footer><p>Josh Brown | <a href="mailto:jbrown@shipleyschool.org">jbrown@shipleyschool.org</a><br>Copyright &copy; 2019 All Rights Reserved</p></footer>
 </div>
 </body>
 </html>
